cluster/k8s/arc/app/webhook-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arc-webhook
  namespace: arc-systems
  annotations:
    external-dns.alpha.kubernetes.io/hostname: arc-webhook.allegedly.works
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - arc-webhook.allegedly.works
  rules:
    - backendRefs:
        - name: arc-controller-webhook-service
          port: 9292
